--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,11 +1,10 @@
 <idea-plugin>
     <id>me.joney.plugin.coderkit.coder-kit</id>
-    <name>Plugin display name here</name>
+    <name>coder-kit</name>
     <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
 
     <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
+    1. 生成setter调用代码.
     ]]></description>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
@@ -17,11 +16,18 @@
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
         <intentionAction>
-            <className>me.joney.plugin.coderkit.intention.GenerateSettersIntentionAction</className>
+            <className>me.joney.plugin.coderkit.genesetter.intention.GenerateSettersIntentionAction</className>
         </intentionAction>
+
     </extensions>
 
     <actions>
         <!-- Add your actions here -->
+        <action id="me.joney.plugin.coderkit.genemybatis.action.MyBatisMethodGenerate"
+          class="me.joney.plugin.coderkit.genemybatis.action.MyBatisMethodGenerate" text="Mybatis method generate"
+          description="Generate mybatis method.">
+            <add-to-group group-id="GenerateGroup" anchor="last"/>
+            <keyboard-shortcut keymap="$default" first-keystroke="alt s" />
+        </action>
     </actions>
 </idea-plugin>
