--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.49'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
 }
 
 intellij {
