修改小幺鸡文件夹选取页为树形结构

--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ intellij {
 }
 patchPluginXml {
     changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+        添加小幺鸡文档生成功能
+      """
 }
 
 tasks.withType(JavaCompile) {
