--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,10 @@
         </intentionAction>
 
         <intentionAction>
+            <className>me.joney.plugin.coderkit.feign.intention.GenerateFeignIntention</className>
+        </intentionAction>
+
+        <intentionAction>
             <className>me.joney.plugin.coderkit.apikit.intention.PostmanIntentionAction</className>
         </intentionAction>
 
